deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thoth
  labels:
    app.kubernetes.io/name: thoth
