deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thoth
  labels:
    app.kubernetes.io/name: thoth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: thoth
  ports:
    - name: https
      port: 3000
      targetPort: https
